Owen Nissley - Fixed all bugs